--- a/app/services/letter-service.html
+++ b/app/services/letter-service.html
@@ -10,54 +10,61 @@
     <core-ajax id="ajax" 
       auto 
       verbose 
-      url="/api/ar/letters.json" 
+      url="{{jsonUrl}}" 
       handleas="json" 
       on-response="lettersLoaded">
     </core-ajax>
   </template>
 </dom-module>
-  <script>
+<script>
+(function() {
   Polymer({
     is: 'letter-service',
 
     properties: {
-      letters: {
-        type: Array,
-        readOnly: true,
-        notify: true
-      },
       currlang: {
         type: String,
-        readOnly: true,
-        notify: true
+        notify: true,
       },
       lobj: {
         type: Object,
-        readOnly: true,
-        notify: true
+        notify: true,
+        value: function () { return {}; }
+      },
+      jsonUrl: {
+        type: String,
+        computed: 'createJsonUrl(currlang)'
+      }
+    },
+    listeners: {
+      'change-language': 'changeJsonUrl'
+    },
+    changeJsonUrl: function(ev) {
+      console.log("change-language heard by letter-service");
+    },
+    createJsonUrl: function(langCode) {
+      console.log("createJsonUrl: " + langCode);
+      if(langCode == undefined) {
+        return "/api/ar/letters.json";
+      } else {
+        return "/api/"+langCode+"/letters.json";
       }
     },
     lettersLoaded: function() {
-      console.log("loading letters...");
+      var jsonSuccess = (this.$.ajax.lastResponse != null) ? true : false;
+      console.log("loading letters from url: " + this.jsonUrl + " \nSuccess: " + jsonSuccess);
       // Make a copy of the loaded data
-      //console.log(ajaxData);
-      var ajaxData = this.$.ajax.lastResponse.slice()[0];
-      shuffle(ajaxData.alphabet);
-      ajaxData.alphabet.forEach(function(entry, i) {
-        entry["currlang"] = ajaxData.lang[0].code;
-        if(i <= 11) {
-          entry["hidden"] = false;
-        }
-      });
-      this._setLobj(ajaxData);
-      //console.log("# letters: " + this.letters.length);
-      //console.log(this.letters[1].letter);
-      //console.log(this.lobj.alphabet[0].letter);
-      //console.log(this.lobj.lang[0].code);
-      //console.log(this.currlang);
-      //console.log(this.lobj);
-      this.fire('new-letters');
-
+      if(jsonSuccess) {
+        var ajaxData = this.$.ajax.lastResponse.slice()[0];
+        this.lobj = ajaxData;
+        //console.log("# letters: " + this.letters.length);
+        //console.log(this.letters[1].letter);
+        //console.log(this.lobj.alphabet[0].letter);
+        //console.log(this.lobj.lang[0].code);
+        //console.log(this.currlang);
+        //console.log(this.lobj);
+        this.fire('new-letters', { jsonLang:  ajaxData.lang.code });
+      }
     },
     /** 
      * Update the service with the current favorite value.
@@ -80,24 +87,6 @@
         }
       }
     }
-    
   });
-  function shuffle(array) {
-    var currentIndex = array.length, temporaryValue, randomIndex ;
-  
-    // While there remain elements to shuffle...
-    while (0 !== currentIndex) {
-  
-      // Pick a remaining element...
-      randomIndex = Math.floor(Math.random() * currentIndex);
-      currentIndex -= 1;
-  
-      // And swap it with the current element.
-      temporaryValue = array[currentIndex];
-      array[currentIndex] = array[randomIndex];
-      array[randomIndex] = temporaryValue;
-    }
-  
-    return array;
-  }
-  </script>
+})();
+</script>
