--- a/app/index.html
+++ b/app/index.html
@@ -20,14 +20,15 @@
   <!-- arabic alphabet
   غ	ظ	ض	ذ	خ	ث	ت	ش	ر	ق	ص	ف	ع	س	ن	م	ل	ك	ي	ط	ح	ز	و	ه	د	ج	ب	ا
   -->
+  <template is="x-autobind">
   <div class="header">
-    Polymer Arabic Game
+    <span>Polymer Arabic Game</span>
   </div>
   <div class="container layout vertical center">
-    <letter-list limit="9" currlang="en"></letter-list>
+    <letter-list limit="9" currlang="ar"></letter-list>
   </div>
   <div class="footer"><letter-card class="space-bar" recenters>___</letter-card></div>
-
+  </template>
 
   <script>
  </script>
