--- a/app/elements/letter-list.html
+++ b/app/elements/letter-list.html
@@ -10,8 +10,7 @@
     }
   </style>
   <template>
-    <h1>{{fitlerWord}}</h1>
-    <letter-service id="service" currlang="{{currlang}}" lobj="{{lobj}}"></letter-service>
+    <letter-service id="service" currlang="{{langCode}}" lobj="{{lobj}}"></letter-service>
         <template id="repeater" is="x-repeat" items="[[filterResults(lobj, filterWord)]]">
           <letter-card
             uid="[[item.uid]]"
@@ -33,13 +32,14 @@
     is: "letter-list",
     properties: {
       limit: {
-        type: Number
+        type: Number,
+        value: 12
       },
       clicked: {
         type: Number,
         notify: true
       },
-      currlang: {
+      langCode: {
         type: String,
         notify: true,
         value: "es"
@@ -74,7 +74,7 @@
       this.fire("letter-tapped");
     },
     onNewLetters: function(event) {
-      console.log("new-letters was fired and heard by letters-list: " + this.currlang);
+      console.log("new-letters was fired and heard by letters-list: " + this.langCode);
       //this.currlang = event.detail.jsonLang;
       //console.log("now the new language is: " + this.currlang);
     },
@@ -83,7 +83,7 @@
       this.currlang = (this.currlang == "ar") ? "en" : "ar";
     },
     filterResults: function(items, filter) {
-      var numTiles = 12;
+      var numTiles = this.limit;
       if(Object.keys(items).length === 0) {
         console.log("hmm, you've got an empty dataset");
       } else {
@@ -100,6 +100,8 @@
           } else if(numTiles > 0) {
             entry.hidden = false;
             numTiles--;
+          } else {
+            entry.hidden = true;
           }
         });
       }
