--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
   <div class="container layout vertical center">
     <letter-list limit="12" lang-code="ar"></letter-list>
   </div>
-  <div class="footer"><letter-card class="space-bar" recenters>___</letter-card></div>
+  <div class="footer"><letter-card class="space-bar" letter=" " on-tap="fireSpaceFunction">___</letter-card></div>
   </template>
 
   <script>
