merged: score-branch

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,2 +1,4 @@
 <link rel="import" href="letter-card.html">
 <link rel="import" href="letter-list.html">
+<link rel="import" href="score-board.html">
+<link rel="import" href="jumbotron-text.html">
