game reset not quite working

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
   -->
   <template is="x-autobind">
   <div class="header">
-    <span id="game-name">Logo</span>
+    <word-board lang-code="ar"></word-board>
     <score-board></score-board>
   </div>
   <div class="container layout vertical center">
@@ -32,16 +32,34 @@
   </template>
 
   <script>
-  var jumbotronBox = document.querySelector("jumbotron-text");
+  /* Catchers */
+  var headerBox = document.querySelector('.header')
   var containerBox = document.querySelector('.container');
   var footerBox = document.querySelector('.footer');
+  /* Batters */
+  var jumbotronBox = document.querySelector("jumbotron-text");
   var scoreBox = document.querySelector('score-board');
-  footerBox.addEventListener('click-from-card', function(event) {
-    jumbotronBox.setAttribute("last-bucket", " ");
+  var letterListBox = document.querySelector('letter-list');
+  var wordBoardBox = document.querySelector('word-board');
+  
+  headerBox.addEventListener('random-word-selected', function(event) {
+    letterListBox.setAttribute("filter-word", event.detail.value);
+    scoreBox.setAttribute("check-word", event.detail.value);
+    jumbotronBox.setAttribute("ziel-wort", event.detail.value);
   });
+  
+  headerBox.addEventListener('correct-answer', function(event) {
+    console.log("Congrats!");
+    wordBoardBox.setAttribute('reset', true);
+  });
+
   containerBox.addEventListener('click-from-card', function(event) {
     jumbotronBox.setAttribute("last-bucket", "");
     jumbotronBox.setAttribute("last-bucket", event.detail.letter);
+  });
+
+  footerBox.addEventListener('click-from-card', function(event) {
+    jumbotronBox.setAttribute("last-bucket", " ");
   });
   footerBox.addEventListener("check-jumbotron-word", function(event) {
     scoreBox.setAttribute("last-bucket", "");
