--- a/app/services/letter-service.html
+++ b/app/services/letter-service.html
@@ -46,7 +46,7 @@
       console.log("change-language heard by letter-service");
     },
     createJsonUrl: function(langCode) {
-      console.log("createJsonUrl: " + langCode);
+      //console.log("createJsonUrl: " + langCode);
       if(langCode == undefined) {
         return "/api/ar/letters.json";
       } else {
