--- a/app/index.html
+++ b/app/index.html
@@ -52,11 +52,16 @@
   
   headerBox.addEventListener('correct-answer', function(event) {
     console.log("Congrats!");
-    wordBoardBox.resetWord2();
+    wordBoardBox.wordFilter();
   });
 
   containerBox.addEventListener('click-from-card', function(event) {
     jumbotronBox.calcScore2(event.detail.letter);
+  });
+  
+  containerBox.addEventListener('resend-word', function(event) {
+    console.log("filter word not found");
+    letterListBox.onNewWord2([wordBoardBox.wordArray[wordBoardBox.ranWordIndex][0],wordBoardBox.wordArray[wordBoardBox.ranWordIndex][1]]); 
   });
 
   footerBox.addEventListener('click-from-card', function(event) {
@@ -64,7 +69,7 @@
   });
   footerBox.addEventListener("check-jumbotron-word", function(event) {
     scoreBox.calcScore2(event.detail.word);
-  })
+  });
 
  </script>
 </body>
