--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <!-- Polymer Imports -->
   <script src="../bower_components/webcomponents/webcomponents.js"></script>
   <link rel="import" href="/bower_components/polymer/polymer.html">
+  <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
   <link rel="import" href="../bower_components/layout/layout.html">
   <!-- Custom Elements Vulcanized -->
   <link rel="import" href="elements/elements.html">
@@ -22,55 +23,61 @@
   غ	ظ	ض	ذ	خ	ث	ت	ش	ر	ق	ص	ف	ع	س	ن	م	ل	ك	ي	ط	ح	ز	و	ه	د	ج	ب	ا
   -->
   <template is="x-autobind">
-  <div class="header">
-    <word-board lang-code="ar"></word-board>
-    <score-board></score-board>
-  </div>
-  <div class="container layout vertical center">
-    <letter-list limit="12" lang-code="ar"></letter-list>
-  </div>
-  <div class="footer"><letter-card class="space-bar" letter=" "><jumbotron-text></jumbotron-text class="layout vertical bottom"></letter-card></div>
+  <core-header-panel id="header-panel" flex>
+    <div class="core-header">
+      <word-board lang-code="ar"></word-board>
+      <score-board></score-board>
+    </div>
+    <div class="content">
+      <letter-list limit="12" lang-code="ar"></letter-list>
+      <div class="footer"><letter-card class="space-bar" letter="!!!"><jumbotron-text></jumbotron-text></letter-card></div>
+    </div>
+  </core-header-panel>
+
   </template>
 
   <script>
   /* Catchers */
-  var headerBox = document.querySelector('.header')
-  var containerBox = document.querySelector('.container');
-  var footerBox = document.querySelector('.footer');
+  //var scope = document.querySelector('template[is=x-autobind]');
+  var headerBox = document.querySelector('core-header-panel');
+  var contentBox = document.querySelector('.content');
+  //var footerBox = document.querySelector('.footer');
   /* Batters */
   var jumbotronBox = document.querySelector("jumbotron-text");
   var scoreBox = document.querySelector('score-board');
   var letterListBox = document.querySelector('letter-list');
   var wordBoardBox = document.querySelector('word-board');
-  
+  /*
   headerBox.addEventListener('random-word-selected', function(event) {
     console.log(event.detail);
-    letterListBox.onNewWord2([event.detail.value, event.detail.valueOhneAccent]);
-    scoreBox.checkWord = [event.detail.value, event.detail.valueOhneAccent];
-    jumbotronBox.zielWort = event.detail.value;
+    //letterListBox.onNewWord2([event.detail.value, event.detail.valueOhneAccent]);
+    //scoreBox.checkWord = [event.detail.value, event.detail.valueOhneAccent];
+    //jumbotronBox.zielWort = event.detail.value;
   });
-  
+  */
+  /*
   headerBox.addEventListener('correct-answer', function(event) {
     console.log("Congrats!");
     wordBoardBox.wordFilter();
   });
-
-  containerBox.addEventListener('click-from-card', function(event) {
+  */
+  /*
+  contentBox.addEventListener('click-from-card', function(event) {
     jumbotronBox.calcScore2(event.detail.letter);
   });
-  
-  containerBox.addEventListener('resend-word', function(event) {
+  */
+  /*
+  contentBox.addEventListener('resend-word', function(event) {
     console.log("filter word not found");
     letterListBox.onNewWord2([wordBoardBox.wordArray[wordBoardBox.ranWordIndex][0],wordBoardBox.wordArray[wordBoardBox.ranWordIndex][1]]); 
   });
-
-  footerBox.addEventListener('click-from-card', function(event) {
-    jumbotronBox.calcScore2(" ");
-  });
-  footerBox.addEventListener("check-jumbotron-word", function(event) {
+  */
+  /*
+  contentBox.addEventListener("check-jumbotron-word", function(event) {
     scoreBox.calcScore2(event.detail.word);
   });
-
+  */
+  
  </script>
 </body>
 
