layout fixes for Firefox and Jumbotron simplification

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     </core-toolbar>
     <div class="content">
       <letter-list limit="12" lang-code="ar"></letter-list>
-      <div class="footer horizontal center-justified layout"><letter-card class="space-bar flex" letter="!!!"><jumbotron-text></jumbotron-text></letter-card></div>
+      <div class="footer horizontal center-justified layout"><jumbotron-text></jumbotron-text></div>
     </div>
   </core-header-panel>
   <script>
