--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Polymer Imports -->
   <script src="../bower_components/webcomponents/webcomponents.js"></script>
-  <link rel="import" href="/bower_components/polymer/polymer.html">
+  <link rel="import" href="../bower_components/polymer/polymer.html">
   <link rel="import" href="../bower_components/layout/layout.html">
   <!-- Layout/Default Elements -->
   <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
